corrected alignment

--- a/FlexImageGallery/style.css
+++ b/FlexImageGallery/style.css
@@ -86,7 +86,8 @@
     font-size: 2em;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px){
     .panel p {
       font-size: 1em;
+    }
 }
